[package]
name = "trading-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
ta = "0.1.5"
poem = {version = "1.3"}
tokio = { version = "1", features = ["full"] }
